--- a/dicee.html
+++ b/dicee.html
@@ -14,7 +14,7 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="">
+        <img class="img1" src="1">
       </div>
 
       <div class="dice">
@@ -24,7 +24,7 @@
 
     </div>
 
-
+    <script src="index.js"></script>
   </body>
 
   <footer>
